<resources>
    <string name="app_name">Middleware Demo</string>
    <string name="title_endpoints">Endpoints</string>
    <string name="title_resources">Resources</string>
    <string name="title_metrics">Metrics</string>
    <string name="title_view_endpoint">View endpoint</string>
    <string name="title_create_endpoint">Create endpoint</string>
    <string name="action_set_rdc_address">Set RDC address</string>
    <string name="action_reset_middleware">Reset middleware</string>
    <string name="action_new_query">New query</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_send_message">Send message</string>
    <string name="heading_peers">Peers</string>
    <string name="heading_ip">IP address</string>
    <string name="heading_name">Name</string>
    <string name="heading_data">Data</string>
    <string name="polarity_source">Source</string>
    <string name="polarity_sink">Sink</string>
    <string name="schema_text">Text</string>
    <string name="schema_int">Integer</string>
    <string name="label_name">Name</string>
    <string name="label_description">Description</string>
    <string name="label_polarity">Polarity</string>
    <string name="label_schema">Schema</string>
    <string name="error_contact_middleware">Error contacting middleware</string>
    <string name="message_endpoint_created">Endpoint created</string>
    <string name="label_tcp_ip_server">TCP/IP server</string>
    <string name="label_zeromq_server">ZeroMQ server</string>
    <string name="label_middleware_server">Middleware server</string>
    <string name="run_middleware_metrics">Run middleware metrics</string>
    <string name="message_length">Message length</string>
    <string name="message_count">Message count</string>
    <string name="default_message_length">50</string>
    <string name="default_message_count">100</string>
    <string name="run_zeromq_metrics">Run ZeroMQ metrics</string>
    <string name="run_tcp_ip_metrics">Run TCP/IP metrics</string>
    <string name="action_run_rdc">Run RDC</string>
    <string name="default_rdc_addr">zmq://127.0.0.1:4854</string>
    <string name="default_zmq_host">127.0.0.1</string>
    <string name="default_tcp_host">127.0.0.1</string>
    <string name="label_tags">Tags</string>
    <string name="polarity_indicator">Polarity indicator.</string>
</resources>
