<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:transitionName="view_endpoint_container"
    app:cardCornerRadius="0dp"
    app:cardElevation="0dp"
    app:contentPadding="0dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        tools:context="uk.ac.cam.seh208.middleware.demo.ViewEndpointActivity">

        <TextView
            android:id="@+id/endpoint_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:fontFamily="monospace"
            android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
            app:layout_constraintEnd_toStartOf="@id/endpoint_polarity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="datetime"/>

        <TextView
            android:id="@+id/endpoint_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toStartOf="@id/endpoint_polarity"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/endpoint_name"
            tools:text="An endpoint that emits the date-time in ISO-8601 format every second."/>

        <TextView
            android:id="@+id/endpoint_schema"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_schema"
            app:layout_constraintTop_toBottomOf="@+id/endpoint_desc"
            tools:text='{"type": "string"}'/>

        <TextView
            android:id="@+id/endpoint_tags"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/label_schema"
            app:layout_constraintTop_toBottomOf="@+id/endpoint_schema"
            tools:text='"test", "source", "date"'/>

        <ImageView
            android:id="@+id/endpoint_polarity"
            android:layout_width="48dp"
            android:layout_height="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_endpoint_source_48dp"
            android:contentDescription="@string/polarity_indicator"/>

        <Button
            android:id="@+id/button_send"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/action_send_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/label_schema"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_schema"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endpoint_desc"/>

        <TextView
            android:id="@+id/label_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/label_tags"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/endpoint_schema"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>
